# IFC

./: .gitignore  pyproject.toml
detectron2/utils/: visualizer.py
projects/IFC/annotation_api/: video_tracked_id_mapping.yaml
projects/IFC/demo/: demo.py  predictor.py  video_prediction_storage.py  visualizer.py
projects/IFC/ifc/: config.py  ifc.py
projects/IFC/ifc/data/: __init__.py
projects/IFC/ifc/structures/: clip_output.py
